Fix issue where form covers drop down menu

--- a/app/assets/stylesheets/navbar.css
+++ b/app/assets/stylesheets/navbar.css
@@ -68,6 +68,7 @@
   font-weight: bold;
   font-size: 14px;
   border: 1px solid black;
+  z-index: 1;
 }
 
 
